[package]
name = "retrofit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hayagriva = { version = "0.8.1", features = ["archive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
wasm-minimal-protocol = "0.1.0"


[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[workspace] # so that it is not included in the upper workspace
